# M1

./: .cppcheck-suppressions.txt  .cproject  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT.md  Doxyfile  HARDWARE.md  MonstaTek_M1_v0800.ioc  PHASE_CHECKLIST.md  Project_files.txt  README.md  build.sh
.changelog/: README.md  acurite-5n1-decoder.added.md  apps-scene-styling.changed.md  async-non-blocking-agent-guidance.changed.md  at-custom-status-cap-probe.added.md  at-firmware-fallback-profiles.changed.md  auto-merge-branches.added.md  badbt-spi-hid-positive-cap-indicator.fixed.md  badusb-parser-migration.changed.md  badusb-parser-tests.added.md  battery-display-smoothing.fixed.md  battery-log.added.md  battery-soc-voltage-correction.fixed.md  bind-new-remote-wizard.added.md  bind-wizard-styling.fixed.md  ble-gatt-discovery.added.md  ble-gatt-fixes.fixed.md  ble-spam-google-fastpair.added.md  boot-loop-iwdg-init.fixed.md  boot-loop-wdt-task-initial-reload.fixed.md  bootloop-fix.fixed.md  bq27421-cfgupdate-crash.fixed.md  bq27421-cfgupmode-iwdg.fixed.md  bq27421-taper-calibration.fixed.md  bt-scan-bleinit-deinit.fixed.md  bt-settings-scene-split.changed.md  cc1101-fec.added.md  changelog-fragments.changed.md  ci-path-filter-nfc-esp.fixed.md  configurable-rssi-threshold.added.md  crypto-aes-tests.added.md  custom-frequency-entry.added.md  deauth-esp32-fw-v1.0.1.added.md  decode-raw-resume-flag.fixed.md  design-unified-main-menu-file-browser.changed.md  elf-alloc-budget.added.md  esl-tag-tinker.added.md  esp32-at-capability-audit.changed.md  esp32-at-cmd-runtime-probe.changed.md  esp32-at-fallback-wifi-join.changed.md  (+247 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDELINES.md  SECURITY.md  release.yml
Battery/: battery.c  battery.h  battery_log.c  battery_log.h  battery_soc_estimate.c  battery_soc_estimate.h  bq27421_golden_image.h  golden_image_0330.h
Infrared/: m1_ir_remotes.c  m1_ir_remotes.h  m1_ir_signals.c  m1_ir_signals.h
Release/: MonstaTek_M1_v0800.elf  MonstaTek_M1_v0800.hex  MonstaTek_M1_v0800.map  makefile  objects.list  sources.mk
Sub_Ghz/: cc1101_fec.c  cc1101_fec.h  m1_sub_ghz_api.c  m1_sub_ghz_api.h  m1_sub_ghz_decenc.c  m1_sub_ghz_decenc.h  subghz_block_decoder.h  subghz_block_encoder.h  subghz_block_generic.c  subghz_block_generic.h  subghz_blocks_math.h  subghz_button_caps.c  subghz_button_caps.h  subghz_button_override.c  subghz_button_override.h  subghz_create_proto.c  subghz_create_proto.h  subghz_decode_try_fn.c  subghz_endless_tx.c  subghz_endless_tx.h  subghz_hex_editor.c  subghz_hex_editor.h  subghz_keeloq.c  subghz_keeloq.h  subghz_keeloq_create.c  subghz_keeloq_create.h  subghz_keeloq_encoder.c  subghz_keeloq_encoder.h  subghz_keeloq_mfkeys.c  subghz_keeloq_mfkeys.h  subghz_keeloq_mfkeys_builtin.c  subghz_key_encoder.c  subghz_key_encoder.h  subghz_level_duration.h  subghz_manchester_decoder.h  subghz_manchester_encoder.h  subghz_new_remote_gen.c  subghz_new_remote_gen.h  subghz_playlist_parser.c  subghz_playlist_parser.h  (+24 more)
build_ci/: CMakeCache.txt  M1_Hapax_v0.9.0.1.elf  M1_Hapax_v0.9.0.1.hex  M1_Hapax_v0.9.0.1.map  Makefile  cmake_install.cmake
cmake/: gcc-arm-none-eabi.cmake
docs/: BLE_WORKFLOWS.md  SUBGHZ_RFID.md  WIFI_WORKFLOWS.md
documentation/: HARDWARE.md  esp32_firmware.md  flipper_import_agent.md  hardware_schematics.md  m1_hil_bootstrap.md  memory_management.md  moonshot_testing.md  subghz_emulation_status.md  subghz_improvement_plan.md  testing_strategy.md  workflows.md
ir_database/: README.txt  SOURCES.md
lfrfid/: lfrfid.c  lfrfid.h  lfrfid_file.c  lfrfid_hal.h  lfrfid_protocol.c  lfrfid_protocol.h  lfrfid_protocol_extra.c  lfrfid_protocol_extra.h  lfrfid_protocol_indala224.c  lfrfid_protocol_indala224.h  lfrfid_protocol_insta_fob.c  lfrfid_protocol_insta_fob.h
m1_csrc/: app_hex_viewer.c  app_rgb_backlight.c  badusb_parser.c  badusb_parser.h  esp32_feature_map.c  esp32_feature_map.h  flipper_file.c  flipper_file.h  flipper_ir.c  flipper_ir.h  flipper_nfc.c  flipper_nfc.h  flipper_rfid.c  flipper_rfid.h  flipper_subghz.c  flipper_subghz.h  hex_viewer.c  hex_viewer.h  ir_button_map.c  ir_button_map.h  ir_signal_record.c  ir_signal_record.h  m1_802154.c  m1_app_api.c  m1_app_manager.c  m1_app_manager.h  m1_badbt.c  m1_badbt.h  m1_badusb.c  m1_ble_spam.c  m1_ble_spam.h  m1_bq25896.c  m1_bq25896.h  m1_bq27421.c  m1_bq27421.h  m1_bt.c  m1_bt.h  m1_bt_scene.c  m1_bt_scene.h  (+209 more)
tests/: CMakeLists.txt  test_assemble_changelog.py  test_badusb_migration.c  test_badusb_parser.c  test_battery_soc.c  test_bit_util.c  test_bq27421_init.c  test_bt_spam_counts.c  test_cc1101_fec.c  test_clock.c  test_convert_keeloq_keys.py  test_crypto.c  test_datatypes_utils.c  test_elf_alloc_budget.c  test_esl_proto.c  test_esp32_caps.c  test_esp32_feature_map.c  test_esp32_main_deinit_releases_legacy_task.c  test_esp32_subghz_lifecycle.c  test_esp_queue.c  test_file_browser.c  test_file_util.c  test_firecracker_cm17a.c  test_flipper_file.c  test_flipper_ir.c  test_flipper_nfc.c  test_flipper_rfid.c  test_flipper_subghz.c  test_fw_source_filter.c  test_hex_viewer.c  test_http_client_parse.c  test_ir_button_map.c  test_ir_cmd_parse.c  test_ir_search.c  test_ir_signal_record.c  test_json_mini.c  test_keeloq_mfkeys_builtin.c  test_keeloq_mfkeys_enc.c  test_led_color_ease.c  test_lfrfid_manchester.c  (+59 more)
tests/stubs/: FreeRTOS.h  app_freertos.h  cmsis_os.h  diskio.h  ff.h  ff_gen_drv.h  file_browser_impl.c  file_browser_impl.h  fw_source_filter_impl.c  http_client_parse_impl.c  http_status_defs.h  ir_search_impl.c  irmp.h  keeloq_builtin_test_data.c  lfrfid.h  lfrfid_hal.h  lfrfid_protocol_stub.h  m1_crypto_stub.c  m1_io_defs.h  m1_log_debug.h  m1_ring_buffer.h  m1_sdcard.h  main.h  nfc_poller_impl.c  portable.h  queue.h  rpc_crc16_impl.c  rpc_crc16_impl.h  rpc_parse_impl.c  rpc_parse_impl.h  settings_hex_color_extract.c  stm32h5xx_hal.h  stream_buffer.h  subghz_decode_impl.c  subghz_decode_stubs.c  subghz_firecracker_test_registry.c  subghz_history_impl.c  t5577.h  task.h
tests/unity/: LICENSE.txt  unity.h
(+283 files in other folders)
